fixed modal width on mobile phones

--- a/components/Modal/style.module.css
+++ b/components/Modal/style.module.css
@@ -16,3 +16,9 @@
   padding: 2rem;
   width: 50%;
 }
+
+@media (max-width: 550px) {
+  .modal__body {
+    width: 90%;
+  }
+}
